# OCP_verified

./: CMakeLists.txt  README.md
app/: main.cpp
config/: default.yaml
include/common/: common_types.hpp
include/ocp/autoware/obstacle_cruise_planner/: motion_utils.hpp  obstacle_cruise_planner_node.hpp  obstacle_utils.hpp  optimization_based_planner.hpp  planner_interface.hpp  polygon_utils.hpp
reference_IO/: obstacle_cruise_planner_WithObj.txt
reference_IO/scenario1/: localization__acceleration.jsonl
reference_IO/scenario2/: localization__acceleration.jsonl
reference_IO/scenario3/: localization__acceleration.jsonl  localization__kinematic_state.jsonl  perception__object_recognition__objects.jsonl
src/: node.cpp  optimization_based_planner.cpp  planner_interface.cpp  polygon_utils.cpp
tools/: plot_ocp_compare.py
